--- a/src/main/java/com/algotrader/client/BUILD
+++ b/src/main/java/com/algotrader/client/BUILD
@@ -3,7 +3,7 @@ java_library(
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "@maven//:com_squareup_okhttp3_okhttp",  # OkHttp
+        "@maven//:com_squareup_okhttp3_okhttp",
         "@maven//:com_squareup_okhttp3_okhttp_urlconnection",
         "@maven//:com_fasterxml_jackson_core_jackson_databind",
         "//src/main/java/com/algotrader/dataclasses:datalib"
