--- a/src/test/java/com/algotrader/client/BUILD
+++ b/src/test/java/com/algotrader/client/BUILD
@@ -20,3 +20,15 @@ java_test(
         "@maven//:junit_junit",
     ]
 )
+
+java_test(
+    name = "AlpacaStreamDataClientTest",
+    srcs = ["AlpacaStreamDataClientTest.java"],
+    test_class = "test.java.com.algotrader.client.AlpacaStreamDataClientTest",
+    resources = ["//src/test/resources:test_env"],
+    deps = [
+        "//src/main/java/com/algotrader/client:clientlib",
+        "//src/main/java/com/algotrader/dataclasses:datalib",
+        "@maven//:junit_junit",
+    ]
+)
